# deip-graphene

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.fullnode  Dockerfile.node  Dockerfile.testnet  Doxyfile  LICENSE.md  README.md  circle.yml  config.ini  deip-variables.env  dev_pk.json  docker-build.sh  docker-compose.yml  docker-ip-protection-build.sh  docker-oa-testnet-build.sh  docker-testnet-build.sh  genesis.json  peer-config.ini  research_object.hpp  staging-peer-config.ini
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  database_witness_schedule.cpp  dbs_account.cpp  dbs_base_impl.cpp  dbs_budget.cpp  dbs_discipline.cpp  dbs_dynamic_global_properties.cpp  dbs_expert_token.cpp  dbs_expertise_allocation_proposal.cpp  dbs_grant.cpp  dbs_proposal.cpp  dbs_proposal_execution.cpp  dbs_research.cpp  dbs_research_content.cpp  dbs_research_content_reward_pool.cpp  dbs_research_discipline_relation.cpp  dbs_research_group.cpp  dbs_research_group_invite.cpp  dbs_research_group_join_request.cpp  dbs_research_reward_pool.cpp  dbs_research_token.cpp  dbs_research_token_sale.cpp  dbs_research_token_sale_contribution.cpp  dbs_review.cpp  dbs_reward.cpp  dbs_vesting_balance.cpp  dbs_vesting_contract.cpp  dbs_vote.cpp  dbs_witness.cpp  dbservice.cpp  deip_evaluator.cpp  deip_objects.cpp  fork_database.cpp  genesis.cpp  shared_authority.cpp
libraries/chain/database/: database.cpp  database_witness_schedule.cpp  fork_database.cpp
libraries/chain/hardfork.d/: 0-preamble.hf  0_1.hf
libraries/chain/schema/: deip_objects.cpp  proposal_object.cpp  shared_authority.cpp  transaction_object.cpp
libraries/chain/services/: dbs_account.cpp  dbs_account_balance.cpp  dbs_assessment.cpp  dbs_asset.cpp  dbs_award.cpp  dbs_base_impl.cpp  dbs_contract.cpp  dbs_contract_agreement.cpp  dbs_contract_requests.cpp  dbs_discipline.cpp  dbs_discipline_supply.cpp  dbs_dynamic_global_properties.cpp  dbs_expert_token.cpp  dbs_expertise_allocation_proposal.cpp  dbs_expertise_contribution.cpp  dbs_expertise_stats.cpp  dbs_funding_opportunity.cpp  dbs_grant.cpp  dbs_grant_application.cpp  dbs_grant_application_review.cpp  dbs_nda_contract.cpp  dbs_nda_contract_requests.cpp  dbs_offer_research_tokens.cpp  dbs_proposal.cpp  dbs_proposal_execution.cpp  dbs_research.cpp  dbs_research_content.cpp  dbs_research_content_reward_pool.cpp  dbs_research_discipline_relation.cpp  dbs_research_group.cpp  dbs_research_group_invite.cpp  dbs_research_license.cpp  dbs_research_token.cpp  dbs_research_token_sale.cpp  dbs_review.cpp  dbs_review_vote.cpp  dbs_reward_pool.cpp  dbs_security_token.cpp  dbs_subscription.cpp  dbs_vesting_balance.cpp  (+2 more)
libraries/chain/util/: reward.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp  egenesis_brief.cpp.tmpl  egenesis_full.cpp  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/plugins/account_eci_history/: CMakeLists.txt  account_eci_history_api.cpp  account_eci_history_plugin.cpp  applied_account_eci_operation.cpp  plugin.json
libraries/plugins/account_history/: CMakeLists.txt  account_history_api.cpp  account_history_plugin.cpp  plugin.json
libraries/plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/plugins/blockchain_history/: CMakeLists.txt  account_history_api.cpp  applied_operation.cpp  blockchain_history_api.cpp  blockchain_history_plugin.cpp  plugin.json
libraries/plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/plugins/content_references_history/: CMakeLists.txt  applied_cr_operation.cpp  cr_history_api.cpp  cr_history_plugin.cpp  plugin.json
libraries/plugins/debug_node/: CMakeLists.txt  debug_node_api.cpp  debug_node_plugin.cpp  plugin.json
libraries/plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/plugins/fo_plugin/: CMakeLists.txt  fo_history_api.cpp  fo_history_plugin.cpp  plugin.json
libraries/plugins/follow/: CMakeLists.txt  follow_api.cpp  follow_evaluators.cpp  follow_operations.cpp  follow_plugin.cpp  (+1 more)
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  deip_operations.cpp  get_config.cpp  operations.cpp  percent.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
programs/deipd/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md
tests/common/: database_fixture.cpp  database_fixture.hpp  defines.hpp
tests/plugin_tests/: main.cpp  plugin_ops.cpp
tests/tests/: account_balance_service_tests.cpp  account_data_service_tests.cpp  basic_tests.cpp  block_tests.cpp  contract_service_tests.cpp  database_unit_tests.cpp  discipline_service_tests.cpp  escrow_transfer_operation_tests.cpp  expert_token_service_tests.cpp  expertise_allocation_proposal_service_tests.cpp  genesis_tests.cpp  grant_application_service_tests.cpp  grant_service_tests.cpp  live_tests.cpp  nda_contract_service_tests.cpp  offer_research_tokens_service_tests.cpp  operation_tests.cpp  operation_time_tests.cpp  proposal_service_tests.cpp  proposal_vote_operation_tests.cpp  research_content_reward_pool_service_tests.cpp  research_content_service.cpp  research_content_service_tests.cpp  research_discipline_relation_service_tests.cpp  research_group_invite_service_tests.cpp  research_group_join_request_service_tests.cpp  research_group_service_tests.cpp  research_service_tests.cpp  research_token_sale_contribution_service_tests.cpp  research_token_sale_service_tests.cpp  research_token_sale_tests.cpp  research_token_service_tests.cpp  review_service_tests.cpp  reward_service_tests.cpp  serialization_tests.cpp  subscription_service_tests.cpp  vesting_contract_service_tests.cpp  vote_service_tests.cpp  witness_service_tests.cpp
tests/wallet/: keys_tests.cpp
(+574 files in other folders)
